--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </main>
 
 <footer>
-    &copy; 2025 — Проект «Безопасный Интернет»
+    &copy; 2025 — Проект «Безопасный Интернет Пехенько9г»
 </footer>
 
 </body>
